# diazotheme.aon2026

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTORS.md  LICENSE.md  Makefile  README.md  backstop.base.json  backstop.features.json  backstop.json  backstop.link-styles.json  backstop.listing-view.json  backstop.scenarios.json  backstop.showcase.json  backstop.testing.md  bobtemplate.cfg  instance.yaml  mx.ini  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py
.serena/: project.yml
backstop_data/engine_scripts/puppet/: onBefore.js
data/: webpack_assets.json
docs/brainstorms/: 2026-02-18-theme-migration-brainstorm.md  2026-04-16-find-a-person-portlet-brainstorm.md  2026-04-30-oag2025-sync-brainstorm.md
docs/plans/: 2026-02-18-feat-theme-migration-from-oag2025-and-intranet2021-plan.md  2026-04-16-feat-find-a-person-portlet-plan.md  2026-04-30-feat-oag2025-source-sync-plan.md
docs/sync/: 2026-04-30-oag2025-sync-log.md
scripts/: a11y-test.js  backstop-config.js  create_site.py  hover-contrast-test.js  sync-from-oag2025.exclude  sync-from-oag2025.sh
scss/: _breadcrumbs.scss  _cards.scss  _comments.scss  _controlpanels.scss  _footer.scss  _grid.scss  _header.scss  _login.scss  _roboto-webfont.scss  _root_variables.scss  _scaffolding.scss  _variables.barceloneta.scss  _variables.colors.dark.plone.scss  _variables.colors.plone.scss  _variables.properties.scss  barceloneta.scss
scss/mixins/: _mixin.portlets.plone.scss
src/diazotheme/aon2026/: __init__.py  configure.zcml  dependencies.zcml  interfaces.py  profiles.zcml  setup.py  testing.py
src/diazotheme/aon2026/browser/: common.py  configure.zcml  utils.py  viewlets.py
src/diazotheme/aon2026/browser/overrides/: plone.app.contenttypes.behaviors.leadimage.pt  plone.app.contenttypes.browser.templates.listing.pt  plone.app.contenttypes.browser.templates.listing_album.pt  plone.app.dexterity.browser.folder_listing.pt.reference  plone.app.layout.nextprevious.nextprevious.pt  plone.app.layout.viewlets.colophon.pt  plone.app.layout.viewlets.searchbox.pt  plone.app.layout.viewlets.searchbox.pt.intranet2021.reference  plone.app.portlets.portlets.navigation_recurse.pt
src/diazotheme/aon2026/browser/templates/: document.pt  search.pt  searchsectionbox.pt
src/diazotheme/aon2026/controlpanels/: configure.zcml
src/diazotheme/aon2026/locales/: diazotheme.aon2026.pot
src/diazotheme/aon2026/locales/en/LC_MESSAGES/: diazotheme.aon2026.mo  diazotheme.aon2026.po
src/diazotheme/aon2026/portlets/: configure.zcml  find_person.pt  find_person.py
src/diazotheme/aon2026/profiles/default/: browserlayer.xml  metadata.xml  portlets.xml  theme.xml
src/diazotheme/aon2026/profiles/default/registry/: main.xml  resources.xml  tinymce.xml
src/diazotheme/aon2026/profiles/default/types/: Document.xml
src/diazotheme/aon2026/profiles/uninstall/: browserlayer.xml
src/diazotheme/aon2026/setuphandlers/: __init__.py
src/diazotheme/aon2026/theme/: index.html  manifest.cfg  rules.xml
src/diazotheme/aon2026/theme/css/: barceloneta-toolbar.css  barceloneta-toolbar.css.map  barceloneta-toolbar.min.css  barceloneta-toolbar.min.css.map  theme.css  theme.css.map  theme.min.css  theme.min.css.map
src/diazotheme/aon2026/theme/js/: aon2026.js  main.js  main.min.js
src/diazotheme/aon2026/theme/roboto/: generator_config.txt
src/diazotheme/aon2026/theme/scss/: accessibility-fixes.scss  annualreport2019.scss  aon2026.scss  callout.scss  macaw-elegant-tabs-reset.css  macaw-elegant-tabs.css  mosaic.scss  print.scss  related-items.scss  search-section.scss  static-content.scss  tables.scss
src/diazotheme/aon2026/theme/static/schoolsAndAuditors/: index.html
src/diazotheme/aon2026/theme/static/schoolsAndAuditors/_file/data/: schools202508.f2e210a4.csv
src/diazotheme/aon2026/theme/static/schoolsAndAuditors/_import/: custom.2b251270.css
src/diazotheme/aon2026/theme/static/schoolsAndAuditors/_import/components/: utils.1af4d62d.js
src/diazotheme/aon2026/theme/static/schoolsAndAuditors/_observablehq/: client.cc78147e.js
src/diazotheme/aon2026/upgrades/: configure.zcml
tests/: conftest.py
tests/portlets/: test_find_person.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py
webpack/: eslint.config.js  loaders.js  plugins.js  webpack.common.js  webpack.dev.js  webpack.prod.js
(+3 files in other folders)
